# summer23-sidgupte1978

./: README.md
lab_1/: run.sh
lab_1/lab1/: Dockerfile  README.md  pyproject.toml
lab_1/lab1/src/: main.py
lab_1/lab1/tests/: test_lab1.py
