[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["“sidgupte1978” <“sidgupte@berkeley.edu”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.1"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
